# DSCI_524_individual-assignment

./: .buildinfo  .readthedocs.yml  README.md  changelog.html  conduct.html  contributing.html  environment.yaml  example.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: gh-pages.yml
_modules/: index.html
_modules/pycounts_johnshiu/: plotting.html  pycounts.html
_sources/: example.ipynb.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/plottingcheckpoint/: index.rst.txt
_sources/autoapi/pycounts_johnshiu/: index.rst.txt
_sources/autoapi/pycounts_johnshiu/plotting/: index.rst.txt
_sources/autoapi/pycounts_johnshiu/pycounts/: index.rst.txt
_sources/autoapi/pycountscheckpoint/: index.rst.txt
autoapi/: index.html
autoapi/plottingcheckpoint/: index.html
autoapi/pycounts_johnshiu/: index.html
autoapi/pycounts_johnshiu/plotting/: index.html
autoapi/pycounts_johnshiu/pycounts/: index.html
autoapi/pycountscheckpoint/: index.html
docs/: conf.py  example.ipynb
pycounts_johnshiu/: CHANGELOG.md  CONTRIBUTING.md  README.md
pycounts_johnshiu/docs/: Makefile  example.ipynb  make.bat
tests/: test_pycounts.py  test_pycounts_johnshiu.py
