[tool.poetry]
name = "pycounts_johnshiu"
version = "0.1.0"
description = "Calculate word counts in a text file!"
authors = ["John Shiu"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
#python = "^3.9" # requires this or any higher version that does not modify the left-most non-zero version digit
python = ">=3.9" # requires this or any higher version that does not modify the left-most non-zero version digit
matplotlib = ">=3.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
